--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="./softycinema-website-favicon---color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/index.jsx"></script>
+    <script src="https://cdn.debugbear.com/88XBjuGtKIf4.js" async></script>
     <title>Softy Cinema</title>
   </head>
   <body>
