--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="eIhsskdsbCgM5hVfMWil9jp_MZH58WAdJyi5w9RQggI" />
     <link rel="icon" href="./softycinema-website-favicon---color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/index.jsx"></script>
