--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="description"
+      content="softycinema a website where you can Keep track of your favorite mouvies and tv shows all in one place!"
+    />
     <meta charset="UTF-8" />
-    <meta name="google-site-verification" content="eIhsskdsbCgM5hVfMWil9jp_MZH58WAdJyi5w9RQggI" />
+    <meta
+      name="google-site-verification"
+      content="eIhsskdsbCgM5hVfMWil9jp_MZH58WAdJyi5w9RQggI"
+    />
     <link rel="icon" href="./softycinema-website-favicon---color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/index.jsx"></script>
